--- a/public/assets/languages/es.json
+++ b/public/assets/languages/es.json
@@ -1,11 +1,11 @@
 {
   "title": "Portafolio",
+  "brand": "Minkaspr",
   "nav": {
-    "brand": "Minkaspr",
     "home": "Inicio",
     "projects": "Proyectos",
     "about": "Sobre mi",
-    "language":{
+    "language": {
       "spanish": "Español",
       "english": "Inglés"
     }
@@ -30,39 +30,83 @@
   },
   "aboutUs": {
     "title": "Sobre mi",
-    "skills": {
-      "title": "Professional Skills",
-      "platforms": ["Desarrollo Web", "Desarrollo Android"],
-      "sections": [
+    "sections": [
+      {
+        "title": "¿Quién Soy?",
+        "content": "Soy un entusiasta del desarrollo de software, siempre buscando crear soluciones innovadoras para situaciones prácticas. He trabajado en el desarrollo de aplicaciones web y móviles, participando en todas las fases del proyecto, desde la planificación hasta la implementación. Me interesa todo el proceso de desarrollo de software, asegurando que las aplicaciones no solo resuelvan problemas, sino que también ofrezcan una excelente experiencia al usuario."
+      },
+      {
+        "title": "¿Cómo Trabajo?",
+        "content": "Valoro el trabajo en equipo y creo que la comunicación y el compromiso son esenciales para el éxito. Me gusta colaborar con otros desarrolladores y recibir retroalimentación para mejorar continuamente. En mi tiempo libre, disfruto escuchando música y explorando nuevas tecnologías a través de videos y tutoriales."
+      },
+      {
+        "title": "Mi Nickname",
+        "content": {
+          "textPrefix": "Mi nick, ",
+          "textMiddle": ", es un acrónimo que rinde homenaje a mis queridas mascotas,",
+          "textMin": "Min",
+          "textAnd": "y",
+          "textKasper": "Kasper."
+        }
+      },
+      {
+        "title": "Habilidades Profesionales",
+        "platforms": [
+          "Desarrollo Web",
+          "Desarrollo Android"
+        ],
+        "items": [
+          {
+            "title": "Lenguajes de Programación",
+            "content": "Java, PHP, JavaScript, TypeScript"
+          },
+          {
+            "title": "Frameworks",
+            "content": "Angular (Front-end), Spring Boot (Back-end), Tailwind, Bootstrap"
+          },
+          {
+            "title": "Bases de Datos",
+            "content": "MySQL, SQLite"
+          },
+          {
+            "title": "Herramientas de Desarrollo",
+            "content": "VSCode, Netbeans, IntelliJ IDEA, Android Studio, Project IDX"
+          },
+          {
+            "title": "Gestión de Proyectos",
+            "content": "Scrum, Kanban"
+          },
+          {
+            "title": "Otras Herramientas",
+            "content": "Microsoft Project, Bizagi, Git, GitHub, Jira, Notion"
+          },
+          {
+            "title": "Prototipado",
+            "content": "Figma"
+          }
+        ]
+      }
+    ]
+  },
+  "footer": {
+    "message": "Gracias por visitar mi portafolio. Espero que encuentres mis proyectos interesantes y útiles.",
+    "connect": {
+      "title": "Conéctate conmigo",
+      "links":  [
         {
-          "category": "Lenguajes de Programación",
-          "items": ["Java", "PHP", "JavaScript", "TypeScript"]
+          "name": "LinkedIn",
+          "url": "https://www.linkedin.com/in/dario-quispe-mk"
         },
         {
-          "category": "Frameworks",
-          "items": ["Angular (Front-end)", "Spring Boot (Back-end)", "Tailwind", "Bootstrap"]
+          "name": "GitHub",
+          "url": "https://github.com/Minkaspr"
         },
         {
-          "category": "Bases de Datos",
-          "items": ["MySQL", "SQLite"]
-        },
-        {
-          "category": "Herramientas de Desarrollo",
-          "items": ["VSCode", "Netbeans", "IntelliJ IDEA", "Android Studio", "Project IDX"]
-        },
-        {
-          "category": "Gestión de Proyectos",
-          "items": ["Scrum", "Kanban"]
-        },
-        {
-          "category": "Otras Herramientas",
-          "items": ["Microsoft Project", "Bizagi", "Git", "GitHub", "Jira"]
-        },
-        {
-          "category": "Prototipado",
-          "items": ["Figma"]
+          "name": "Telegram",
+          "url": "https://t.me/minkaspr?start=Hola%20me%20gustaría%20contactarte"
         }
       ]
-    }
+    },
+    "copyright": "Copyright © 2024 | Todos los derechos reservados."
   }
 }
